src/sna/gen6_render.c
@@ -330,22 +330,6 @@ static uint32_t gen6_get_card_format_for_depth(int depth)
 	}
 }
 
-static bool gen6_format_is_dst(uint32_t format)
-{
-	switch (format) {
-	case GEN6_SURFACEFORMAT_B8G8R8A8_UNORM:
-	case GEN6_SURFACEFORMAT_R8G8B8A8_UNORM:
-	case GEN6_SURFACEFORMAT_B10G10R10A2_UNORM:
-	case GEN6_SURFACEFORMAT_B5G6R5_UNORM:
-	case GEN6_SURFACEFORMAT_B5G5R5A1_UNORM:
-	case GEN6_SURFACEFORMAT_A8_UNORM:
-	case GEN6_SURFACEFORMAT_B4G4R4A4_UNORM:
-		return true;
-	default:
-		return false;
-	}
-}
-
 static uint32_t gen6_filter(uint32_t filter)
 {
 	switch (filter) {
@@ -1073,25 +1057,19 @@ gen6_bind_bo(struct sna *sna,
 	if (is_dst) {
 		domains = I915_GEM_DOMAIN_RENDER << 16 |I915_GEM_DOMAIN_RENDER;
 		kgem_bo_mark_dirty(bo);
-	} else {
+	} else
 		domains = I915_GEM_DOMAIN_SAMPLER << 16;
-		is_dst = gen6_format_is_dst(format);
+
+	offset = kgem_bo_get_binding(bo, format);
+	if (offset) {
+		DBG(("[%x]  bo(handle=%d), format=%d, reuse %s binding\n",
+		     offset, bo->handle, format,
+		     domains & 0xffff ? "render" : "sampler"));
+		return offset;
 	}
 
 	offset = sna->kgem.surface - sizeof(struct gen6_surface_state_padded) / sizeof(uint32_t);
 	offset *= sizeof(uint32_t);
-
-	if (is_dst) {
-		if (bo->dst_bound)
-			return bo->dst_bound;
-
-		bo->dst_bound = offset;
-	} else {
-		if (bo->src_bound)
-			return bo->src_bound;
-
-		bo->src_bound = offset;
-	}
 
 	sna->kgem.surface -=
 		sizeof(struct gen6_surface_state_padded) / sizeof(uint32_t);
@@ -1108,6 +1086,8 @@ gen6_bind_bo(struct sna *sna,
 		 (bo->pitch - 1) << GEN6_SURFACE_PITCH_SHIFT);
 	ss[4] = 0;
 	ss[5] = 0;
+
+	kgem_bo_set_binding(bo, format, offset);
 
 	DBG(("[%x] bind bo(handle=%d, addr=%d), format=%d, width=%d, height=%d, pitch=%d, tiling=%d -> %s\n",
 	     offset, bo->handle, ss[1],
